# chessengine

./: CMakeLists.txt  CMakePresets.json  posdraw.fen
include/: engine_search.h  evaluation.h  game.h  minimax.h  uci.h
src/: engine.cpp  engine_search.cpp  evaluation.cpp  game.cpp  main.cpp  minimax.cpp  uci.cpp
tests/: test.cpp
tests/data/: arasan2024.epd
